--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,12 @@ a:hover {
   color: #535bf2;
 }
 
+/*added this so that page will fit without scrolling*/
+html {
+  height: 100vh;
+  margin: 0;
+}
+
 body {
   margin: 0;
   display: flex;
