--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -8,6 +8,8 @@
   display: flex;
   flex: 0 1 auto;
   overflow: hidden;
+  border-color: red;
+  border-width: 50px;
 }
 
 .main {
@@ -20,8 +22,12 @@
 }
 
 .chats {
-  background-color: #2c2f33;
-  border-top-left-radius: 15px;
+  border-color: red;
+  border-width: thick;
+  /* background-color: #1a1c1f; */
+  border-radius: 50px;
+  /* background-color: #2c2f33; */
+  /* border-top-left-radius: 15px; */
   /* min-width: 20em;
     max-width: 20em; */
   overflow: hidden;
@@ -29,6 +35,7 @@
 }
 
 .message-area {
+  border-radius: 25px;
   background-color: #36393f;
   padding-left: 1em;
   flex: 1 1 auto;
@@ -76,8 +83,6 @@
   padding: 0 16px;
   margin-top: auto;
   width: 100%;
-
-  margin-left: -16px;
 }
 
 .chat-box input[type="text"] {
@@ -105,3 +110,5 @@
 .chat-box button[type="submit"]:hover {
   background-color: #5a68a5;
 }
+
+
