--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -167,3 +167,17 @@
   align-items: center;
   font-size: 40px;
 }
+
+.message-div {
+  display: flex;
+  align-items: center;
+}
+
+.message-div > h1 {
+  font-size: 30px;
+  padding: 12px;
+  margin-left: 10px;
+  display: inline-block;
+  border: 1px solid white;
+  border-radius: 10%;
+}
