added group changes
removed padding for.top class in Home.css and removed overflow for group-name in Group.css

--- a/frontend/src/Group.css
+++ b/frontend/src/Group.css
@@ -15,8 +15,7 @@
 .group-name {
     font-size: 2em;
   color: white;
-  margin: auto auto auto 20px;
-  overflow: hidden;
-  text-overflow: clip;
+  margin: auto;
+  
   white-space: nowrap;
 }
