--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -32,7 +32,7 @@ html {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  place-items: normal;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -72,4 +72,5 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} 
+
