--- a/frontend/src/pages/Settings/Settings.css
+++ b/frontend/src/pages/Settings/Settings.css
@@ -3,17 +3,17 @@ body {
 }
 
 .settingsParent {
+  
   background-image: none;
-  background-color: black;
-  display: flex;
-  flex-flow: column wrap;
+  background-color: rgb(82, 82, 82);
   height: 100%;
-  position: absolute;
   width: 100%;
-  top: 0px;
-  right: 0px;
-  flex-direction: column;
-  height: 100%;
+  display: flex;
+  box-sizing: border-box;
+  flex-flow: column wrap;
+  position: absolute;
+  flex-direction: row;
+
 }
 
 
