--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -202,11 +202,20 @@
 }
 
 .message-div {
+  position: relative;
   display: flex;
   align-items: center;
 }
 
-.message-div > h1 {
+.message-div>h2{
+  font-size: 15px;
+  margin-left: 10px;
+  color: white;
+  display: inline-block;
+  border-radius: 10%;
+}
+
+.message-div>h1{
   font-size: 30px;
   padding: 12px;
   margin-left: 10px;
@@ -215,3 +224,12 @@
   border: 1px solid white;
   border-radius: 10%;
 }
+
+.message-div>h3{
+  font-size: 10px;
+  margin-left: 10px;
+  color: white;
+  display: inline-block;
+  border-radius: 10%;
+}
+
