--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -33,13 +33,14 @@
   
 }
 .userList{
-  background-color: blue;
+  background-color: #2c2f33;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   overflow-x: scroll;
+  align-self:flex-start;
 
 }
 
@@ -59,15 +60,19 @@
 .sideview-bottom{
   display: flex;
   justify-content: space-between;
-  padding: 20px 10px 40px; 
+  padding: 20px 10px; 
   align-items: center;
+  background-color: #2c2f33;
+  height:60px;
 }
 
 .options {
   display: flex;
   align-items: center;
 }
-
+.addUsers {
+  margin: auto;
+}
 .chats {
   /* border-color: red; */
   /* border-width: thick; */
@@ -95,6 +100,7 @@
   width: 100%;
   overflow-y: scroll;
   display: flex;
+  padding-top: 20px; /*this allows very first message to not be cut off */
 }
 
 .parent {
@@ -112,19 +118,24 @@
 .message-container {
   padding: 8px;
   height: 100%;
-  margin-bottom: 30px; /* Set to height of chat-box div */
+  
+  /* margin-bottom: 30px;  */
+ 
+  /* Set to height of chat-box div */
 }
 
 .chat-chatbox-area {
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  background-color: #2c2f33;
   flex-grow:1;
+  
   /* width: 100%; */
 }
 
 .chat-box {
-  height: 60px;
+  height: 100px;
+  min-height: 100px;
   background-color: #2c2f33;
   display: flex;
   justify-content: space-between;
@@ -213,10 +224,8 @@
 
 .username {
   margin: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
+  font-size: 30px;
+  color: white;
 }
 
 .message-div {
@@ -232,4 +241,9 @@
   display: inline-block;
   border: 1px solid white;
   border-radius: 10%;
+}
+
+
+button {
+  color: white;
 }
