--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -60,6 +60,7 @@
   font-size: 2em;
   color: white;
 }
+
 .sideview-bottom{
   display: flex;
   justify-content: space-between;
@@ -69,13 +70,24 @@
   height:60px;
 }
 
+.username {
+  margin: 8px;
+  font-size: 30px;
+  color: white;
+  white-space: nowrap;
+  text-overflow: clip;
+  overflow: scroll;
+}
+
 .options {
   display: flex;
   align-items: center;
 }
+
 .addUsers {
   margin: auto;
 }
+
 .chats {
   /* border-color: red; */
   /* border-width: thick; */
@@ -141,14 +153,21 @@
   min-height: 100px;
   background-color: #2c2f33;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding: 0 16px;
-  margin-top: auto;
-  width: 100%;
+  /* margin-top: auto; */
+  /* width: 100%; */
 }
 
-.chat-box input[type="text"] {
+.sub-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.chat-box input[type="textarea"] {
   flex: 1;
   background-color: #2c2f33;
   color: white;
@@ -156,7 +175,8 @@
   padding: 10px;
   margin-right: 16px;
   font-size: 16px;
-  padding-right: 200px;
+ 
+  /* padding-right: 200px; */
 }
 
 .chat-box button[type="submit"] {
@@ -223,12 +243,6 @@
   left: 10px;
   padding: 10px;
   cursor: pointer;
-}
-
-.username {
-  margin: 8px;
-  font-size: 30px;
-  color: white;
 }
 
 .message-div {
