--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,24 +1,25 @@
 .bot {
-  background-color: #2c2f33;
   width: 25%;
 }
 
 .top {
   /* padding-left: 50px; */
   padding-right: 2rem;
-  background-color: #2c2f33;
+  background-color: rgb(51, 51, 25);
+  mix-blend-mode: multiply;
   display: flex;
   flex: 0 1 auto;
   align-items: center;
   overflow: hidden;
   justify-content: space-between;
-  border-color: red;
+  /* border-color: red; */
   border-width: 50px;
   min-height: 118px;
 }
 
 .body {
-  background-color: #2c2f33;
+  background-color: grey;
+  mix-blend-mode: multiply;
   display: flex;
   flex: 1 1 auto;
   flex-direction: row;
@@ -31,10 +32,10 @@
   flex-flow: column nowrap;
   justify-content: space-between;
   max-width: 20vw;
+  background-color: #1c2544;
 }
 .userList{
-  background-color: #2c2f33;
-  display: flex;
+    display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -66,7 +67,7 @@
   justify-content: space-between;
   padding: 20px 10px; 
   align-items: center;
-  background-color: #2c2f33;
+  /* background-color: #2c2f33; */
   height:60px;
 }
 
@@ -91,7 +92,8 @@
 .chats {
   /* border-color: red; */
   /* border-width: thick; */
-  background-color: #1a1c1f;
+  background-color: yellow;
+  mix-blend-mode: multiply;
   border-radius: 50px;
   /* background-color: #2c2f33; */
   /* border-top-left-radius: 15px; */
@@ -102,8 +104,8 @@
 }
 
 .message-area {
-  border-radius: 25px;
-  background-color: #36393f;
+  background-color: white;
+
   padding-left: 1em;
   flex: 1 1 100%;
   border-top-right-radius: 15px;
@@ -143,7 +145,7 @@
 .chat-chatbox-area {
   display: flex;
   flex-direction: column;
-  background-color: #2c2f33;
+  
   flex-grow:1;
   
   /* width: 100%; */
@@ -152,8 +154,8 @@
 .chat-box {
   height: 100px;
   min-height: 100px;
-  background-color: #2c2f33;
-  display: flex;
+  background-color: #1c2544;
+   display: flex;
   /* justify-content: space-between; */
   align-items: center;
   padding: 0 16px;
