--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -305,7 +305,8 @@
   margin-top: -10rem;
   width: 20rem;
   height: 20rem;
-  background-color: inherit;
+  background-color: transparent;
+  z-index: 100;
 }
 
 .userName{
