--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,3 +1,9 @@
+:root{
+  --primary-colour:#2f323d;
+  --secondary-colour:purple;
+  --tertiary-colour:yellow;
+}
+
 .bot {
   width: 25%;
 }
@@ -5,7 +11,7 @@
 .top {
   /* padding-left: 50px; */
   padding-right: 2rem;
-  background-color: rgb(51, 51, 25);
+  background-color: var(--primary-colour);
   mix-blend-mode: multiply;
   display: flex;
   flex: 0 1 auto;
@@ -31,8 +37,10 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  max-width: 20vw;
-  background-color: #1c2544;
+  width: 20%;
+  overflow-x:hidden;
+  overflow-y: scroll;
+  background-color: var(--primary-colour);
 }
 .userList{
     display: flex;
@@ -92,7 +100,6 @@
 .chats {
   /* border-color: red; */
   /* border-width: thick; */
-  background-color: yellow;
   mix-blend-mode: multiply;
   border-radius: 50px;
   /* background-color: #2c2f33; */
@@ -104,7 +111,7 @@
 }
 
 .message-area {
-  background-color: white;
+  /* background-color: white; */
 
   padding-left: 1em;
   flex: 1 1 100%;
@@ -136,7 +143,8 @@
 .message-container {
   padding: 8px;
   height: 100%;
-  
+  background-color: transparent;
+  mix-blend-mode: multiply;
   /* margin-bottom: 30px;  */
  
   /* Set to height of chat-box div */
@@ -154,7 +162,7 @@
 .chat-box {
   height: 100px;
   min-height: 100px;
-  background-color: #1c2544;
+  background-color: var(--primary-colour);;
    display: flex;
   /* justify-content: space-between; */
   align-items: center;
