--- a/frontend/src/pages/Home/UserMessage.css
+++ b/frontend/src/pages/Home/UserMessage.css
@@ -18,7 +18,7 @@
 }
 
 .messageSender {
-    color: #FAF9F6;
+    color: black;
 }
 
 .messageTop * {
@@ -32,7 +32,7 @@
 .messageContent {
     margin: 5px 0px 25px; /*top left/right bottom*/
     flex-wrap: wrap;
-    color: #FAF9F6;
+    color: black;
     overflow-wrap: break-word;
     width: 60vw;
     max-width: 60vw;
