--- a/frontend/src/SignUp.css
+++ b/frontend/src/SignUp.css
@@ -3,3 +3,31 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+
+.mainContent {
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+}
+
+.mainButton {
+  width: 300px;
+  padding: 100px;
+}
