--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -2,11 +2,11 @@
   width: 25%;
 }
 
-.top {
+#top {
   /* padding-left: 50px; */
   padding-right: 2rem;
-  background-color: rgb(51, 51, 25);
-  mix-blend-mode: multiply;
+  /* background-color: rgb(51, 51, 25); */
+  /*mix-blend-mode: multiply;*/
   display: flex;
   flex: 0 1 auto;
   align-items: center;
@@ -19,7 +19,7 @@
 
 .body {
   background-color: grey;
-  mix-blend-mode: multiply;
+  /*mix-blend-mode: multiply;*/
   display: flex;
   flex: 1 1 auto;
   flex-direction: row;
@@ -27,12 +27,12 @@
   overflow: hidden;
 }
 
-.sideview {
+#sideview {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
   max-width: 20vw;
-  background-color: #1c2544;
+  /* background-color: #1c2544; */
 }
 .userList {
   display: flex;
@@ -92,7 +92,7 @@
   /* border-color: red; */
   /* border-width: thick; */
   background-color: yellow;
-  mix-blend-mode: multiply;
+  /*mix-blend-mode: multiply;*/
   border-radius: 50px;
   /* background-color: #2c2f33; */
   /* border-top-left-radius: 15px; */
@@ -119,7 +119,7 @@
   padding-top: 20px; /*this allows very first message to not be cut off */
 }
 
-.parent {
+#parent {
   position: relative;
   display: flex;
   flex-flow: column;
@@ -150,10 +150,10 @@
   /* width: 100%; */
 }
 
-.chat-box {
+#chat-box {
   height: 100px;
   min-height: 100px;
-  background-color: #1c2544;
+  /* background-color: #1c2544; */
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
@@ -169,7 +169,7 @@
   align-items: center;
 }
 
-.chat-box input[type="textarea"] {
+#chat-box input[type="textarea"] {
   flex: 1;
   background-color: #2c2f33;
   color: white;
@@ -181,7 +181,7 @@
   /* padding-right: 200px; */
 }
 
-.chat-box button[type="submit"] {
+#chat-box button[type="submit"] {
   background-color: #7289da;
   color: white;
   border: none;
