--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,3 +1,9 @@
+:root{
+  --primary-colour:#2f323d;
+  --secondary-colour:purple;
+  --tertiary-colour:yellow;
+}
+
 .bot {
   width: 25%;
 }
@@ -5,8 +11,6 @@
 .top {
   /* padding-left: 50px; */
   padding-right: 2rem;
-  background-color: rgb(51, 51, 25);
-  mix-blend-mode: multiply;
   display: flex;
   flex: 0 1 auto;
   align-items: center;
@@ -18,8 +22,6 @@
 }
 
 .body {
-  background-color: grey;
-  mix-blend-mode: multiply;
   display: flex;
   flex: 1 1 auto;
   flex-direction: row;
@@ -31,8 +33,9 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  max-width: 20vw;
-  background-color: #1c2544;
+  width: 20%;
+  overflow-x:hidden;
+  overflow-y: scroll;
 }
 .userList {
   display: flex;
@@ -91,7 +94,6 @@
 .chats {
   /* border-color: red; */
   /* border-width: thick; */
-  background-color: yellow;
   mix-blend-mode: multiply;
   border-radius: 50px;
   /* background-color: #2c2f33; */
@@ -103,7 +105,7 @@
 }
 
 .message-area {
-  background-color: white;
+  /* background-color: white; */
 
   padding-left: 1em;
   flex: 1 1 100%;
@@ -135,7 +137,6 @@
 .message-container {
   padding: 8px;
   height: 100%;
-
   /* margin-bottom: 30px;  */
 
   /* Set to height of chat-box div */
