--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -273,7 +273,7 @@
   margin-top: -10rem;
   width: 20rem;
   height: 20rem;
-  background-color: transparent;
+  backdrop-filter: blur(10px);
   z-index: 100;
 }
 
@@ -305,7 +305,7 @@
   margin-top: -10rem;
   width: 20rem;
   height: 20rem;
-  background-color: transparent;
+  backdrop-filter: blur(10px);
   z-index: 100;
 }
 
