--- a/frontend/src/pages/Home/Group.css
+++ b/frontend/src/pages/Home/Group.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     text-align: center;
+    border: 2px solid transparent;
 }
 
 .group-name {
@@ -22,7 +23,7 @@
 
 .group:hover {
   /* background-color: lightblue; */
-  border: 1px solid white;
+  border: 2px solid white;
 }
 
 .group:active {
@@ -31,5 +32,5 @@
 }
 
 .active{
-  background-color: green;
+  border: 2px solid black;
 }
